Implement Allocate Hearing functionality with controller and service layers